--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -23,7 +23,7 @@
     state: present
   when: ansible_os_family == 'RedHat'
 
-- name: install redis
+- name: Install redis
   become: true
   ansible.builtin.apt:
     update_cache: true
